# hermitdroid

./: Cargo.toml  LICENSE  Makefile  README.md  SETUP_GUIDE.md  config.default.toml  config.toml  install.sh
.github/workflows/: release.yml
android_bridge/: PROTOCOL.md
examples/flows/: clear-notifications.yaml  lock-screen.yaml  recent-apps.yaml  screenshot.yaml  toggle-wifi.yaml
examples/workflows/lifestyle/: food-order.json  maps-commute.json  spotify-play.json
examples/workflows/messaging/: email-digest.json  email-reply.json  slack-standup.json  telegram-send.json  whatsapp-broadcast.json  whatsapp-send.json
examples/workflows/productivity/: calendar-check.json  github-check-prs.json  morning-briefing.json  notification-cleanup.json
examples/workflows/research/: google-search.json  price-comparison.json  weather-report.json
examples/workflows/social/: youtube-search.json
src/: fallback.rs  flow.rs  main.rs  onboarding.rs  oneshot.rs  sanitizer.rs  stuck.rs  tailscale.rs  workflow.rs
src/action/: mod.rs
src/brain/: mod.rs
src/config/: mod.rs
src/perception/: mod.rs
src/server/: dashboard.html  mod.rs
src/session/: mod.rs
src/soul/: mod.rs
workspace/: AGENTS.md  BOOTSTRAP.md  GOALS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md
workspace.default/: HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
workspace.default/memory/: 2026-02-20.md
workspace/skills/notification-summarizer/: SKILL.md
