[package]
name = "hermitdroid"
version = "0.1.0"
edition = "2021"
description = "An OpenClaw-inspired autonomous Android AI agent with persistent identity, heartbeat, memory, skills, and multi-channel support"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"], default-features = false }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
regex = "1"
glob = "0.3"
anyhow = "1"
cron = "0.13"
tokio-cron-scheduler = "0.13"
dashmap = "6"